# amd

./: .gitignore  README.md  about.md  amd.cabal  index.md  makefile  site.hs
css/: default.css
docs/: about.html  index.html
docs/css/: default.css
docs/src/: Booleans.html  Naturals.html  Types.html
docs/src/Booleans/: And.html  Eq.html  Not.html  Or.html
docs/src/Functions/: Booleans.html  Clone.html  Const.html  Flip.html  Helpers.html  IdComp.html
docs/src/NaturalDeduction/: Basics.html  ConjDisj.html  Equality.html  Equiv.html  ForAll.html  Neg.html
docs/src/Naturals/: Divides.html  DivisionAlgorithm.html  GreatestCommonDivisor.html  IterativeNorm.html  LessThan.html  LessThanOrEqualTo.html  MaxAndMin.html  Minus.html  MutatingRecursion.html  Plus.html  Previous.html  SimpleEquations.html  SimpleRecursion.html  Times.html
docs/src/Proof/: Basics.html  ConjDisj.html  Equality.html  Equiv.html  Exists.html  ForAll.html  Neg.html
src/: Booleans.lhs  Naturals.lhs  Types.lhs
src/Booleans/: And.lhs  Eq.lhs  Not.lhs  Or.lhs
src/Functions/: Clone.lhs  Const.lhs  Flip.lhs  Helpers.lhs  IdComp.lhs
src/Naturals/: Divides.lhs  DivisionAlgorithm.lhs  GreatestCommonDivisor.lhs  IterativeNorm.lhs  LessThan.lhs  LessThanOrEqualTo.lhs  MaxAndMin.lhs  Minus.lhs  MutatingRecursion.lhs  Plus.lhs  Previous.lhs  SimpleEquations.lhs  SimpleRecursion.lhs  Times.lhs
src/Proof/: Basics.lhs  ConjDisj.lhs  Equality.lhs  Equiv.lhs  Exists.lhs  ForAll.lhs  Neg.lhs
src/Types/: Either.lhs  Maybe.lhs  Pair.lhs  Unit.lhs
templates/: default.html  latex.html
(+8 files in other folders)
