name:               amd
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  default-language: Haskell2010
  main-is: site.hs
  ghc-options: -threaded
  build-depends:
      base == 4.*
    , containers == 0.5.*
    , hakyll == 4.12.*
    , pandoc == 2.2.*
    , skylighting == 0.7.*
    , skylighting-core == 0.7.*
